syntax = "proto3";
package plugins.gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/plugins";

import "gogoproto/gogo.proto";

import "github.com/solo-io/gloo/projects/gloo/api/v1/plugins/rest/rest.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/plugins/grpc/grpc.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/plugins/sqoop/sqoop.proto";


// TODO: cna't use plugins/rest/rest.proto as it creates a import cycle in the generated go.

option (gogoproto.equal_all) = true;

// Describes APIs and application-level information for services
// Gloo routes to. ServiceSpec is contained within the UpstreamSpec for certain types
// of upstreams, including Kubernetes, Consul, and Static.
// ServiceSpec configuration is opaque to Gloo and handled by Service Plugins.
message ServiceSpec {
    // Note to developers: new Service Plugins must be added to this oneof field
    // to be usable by Gloo.
    oneof plugin_type {
        rest.plugins.gloo.solo.io.ServiceSpec rest = 1;
        grpc.plugins.gloo.solo.io.ServiceSpec grpc = 2;
        sqoop.plugins.gloo.solo.io.ServiceSpec sqoop = 3;
    }
}